--- a/design.css
+++ b/design.css
@@ -2,7 +2,8 @@
 
 .sec0 {
        background-color: #2F3330;
-       padding: 10% 10% 10% 5%;
+       padding: 10% 5% ;
+       display: flex;
 }
 
 *{
@@ -10,14 +11,14 @@
 }
 
 .sec01{
-   margin-left: 7%;    
+   margin-left: 0%;    
 }
 
 #des1 {
        font-weight: bold;
        font-size: 100%;
        color: #C2C4B8;
-       padding-bottom: 10%;
+       padding-bottom: 6%;
        /* max-width: 500px; */
 }
 /* #line1 {
@@ -28,6 +29,7 @@
        color:#FFFFFF;
        font-weight: bold;
        font-size: 300%;
+       padding-bottom: 6%;
        /* padding-left: 10%; */
 }
 
@@ -35,6 +37,7 @@
        color: #C2C4B8;
        font-weight: bold;
        font-size: 100%;
+       padding-bottom: 15%;
 }
 
 #des4{
@@ -59,14 +62,26 @@
 }
 
 .sec02{
-     
+    margin-left: 10%;
+    
 }
 
-
+/*
 #img1{
        border-radius: 10px;
-       padding-left: 60%;
-       align-items: top;
+        padding-left: 0%; */
+       /* align-items: top; */
+       
+#im{
+       height: 500px;
+       width: 450px;
+}  
+
+
+.sec1{
+       background-color: #C2C4B8;
+       padding-top: 5%;
+       padding-left: 5%;
+}
       
        
-}
