--- a/design.css
+++ b/design.css
@@ -4,6 +4,7 @@
        background-color: #2F3330;
        padding: 10% 5% ;
        display: flex;
+       /* border: 10px solid greenyellow; */
 }
 
 *{
@@ -11,7 +12,8 @@
 }
 
 .sec01{
-   margin-left: 0%;    
+   margin-left: 0%;
+   /* border: 5px solid greenyellow;     */
 }
 
 #des1 {
@@ -19,7 +21,7 @@
        font-size: 100%;
        color: #C2C4B8;
        padding-bottom: 6%;
-       /* max-width: 500px; */
+       /* border: 5px solid greenyellow; */
 }
 /* #line1 {
        width: 500px;
@@ -30,7 +32,7 @@
        font-weight: bold;
        font-size: 300%;
        padding-bottom: 6%;
-       /* padding-left: 10%; */
+       /* border: 5px solid greenyellow; */
 }
 
 #des3{
@@ -38,6 +40,7 @@
        font-weight: bold;
        font-size: 100%;
        padding-bottom: 15%;
+       /* border: 5px solid greenyellow; */
 }
 
 #des4{
@@ -48,14 +51,17 @@
 #des4.btn,#des4.btn:hover{
        background-color: #995A3F;
        color: #FFFFFF;
+       /* border: 5px solid greenyellow; */
 }
 #des4.btn:hover{
        background-color: #434945;
+       
 }
 
 #des5.btn {
        color: #FFFFFF;
        background-color: #434945;
+       /* border: 5px solid greenyellow; */
 }
 #des5.btn:hover{
        background-color: #995A3F;
@@ -63,7 +69,7 @@
 
 .sec02{
     margin-left: 10%;
-    
+    /* border: 5px solid greenyellow; */
 }
 
 /*
@@ -75,6 +81,7 @@
 #im{
        height: 500px;
        width: 450px;
+       
 }  
 
 
@@ -82,6 +89,7 @@
        background-color: #C2C4B8;
        padding-top: 5%;
        padding-left: 5%;
+       /* border: 5px solid greenyellow; */
 }
       
        
